Many look changes.

--- a/app/views/layouts/_doc_header.html.erb
+++ b/app/views/layouts/_doc_header.html.erb
@@ -14,7 +14,7 @@
 	<%= javascript_include_tag "gmaps4rails/gmaps4rails.mapquest.js" %>
 	<%= javascript_include_tag "gmaps4rails/gmaps4rails.openlayers.js" %>
 	<%= javascript_include_tag "script.js" %>
-
+  <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
   <%= csrf_meta_tag %>
 	<script type="text/javascript">
 
