--- a/app/views/layouts/_page_header.html.erb
+++ b/app/views/layouts/_page_header.html.erb
@@ -1,24 +1,5 @@
- <div id="header">
-   <h1><%= link_to "ABL", root_path %><span id="beta">beta</span> </h1>
-    <div id="user_bar">
-     <ul>
-		<li><%= link_to "Beers", beers_path %></li>
-		<li>-</li>
-		<li><%= link_to "Bars", bars_path %></li>
-		<li>-</li>
-		<li><%= link_to "Breweries", breweries_path %></li>
-		<li>|</li>
-      <% if user_signed_in? %>	
-		   	<% unless current_user.admin_bars.empty? %>      
-					<li><%= link_to "Manage Bars", bar_owner_path %></li>
-					<li>|</li>
-			 <% end %>
-					<li>Welcome, <%= current_user.email %> (<%= link_to "Logout", destroy_user_session_path, :id=>'logout', :method => :delete %>)</li>
-      <% else %>
-					<li><%= link_to "Signup", new_user_registration_path %></li>
-					<li>|</li>
-        <li><%= link_to "Login", new_user_session_path %></li>
-      <% end %>
-     </ul>
-    </div>
- </div>
+<div id="title">
+  &nbsp;
+  <%= render :partial => "layouts/userbar" %>
+</div>
+<div id="wrap">
