--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,11 +3,10 @@
   margin: 0 auto; 
 }
 body {
-  background-color: #fff;
-  color: #333; 
+  color: #333;
+  background: url('/images/raysbg.jpg') no-repeat;
 }
 body, p, ol, ul, td {
-  font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   /* line-height: 18px; */
   margin: 0px;
@@ -34,13 +33,13 @@ a.no_hover_background {
   padding: 0 2px;
   text-decoration: none; 
 }
-#header, #main, #footer {
-  width: 850px;
+#main, #footer {
+  width: 910px;
 }
 #header {
+  width: 960px;
   font-family: "Myriad Web Pro",Helvetica,Arial,sans-serif;
   letter-spacing: 1px;
-  border-bottom: 5px solid #333333;
   color: #333333;
   padding: 20px 0px;
   height: 35px;
@@ -59,13 +58,11 @@ a.no_hover_background {
   color: black;
   background-color: white;
   color: black;
-  border-bottom: 6px solid #ccc; 
 }
 #header h1 a:hover {
   background-color: white;
   color: black;
-  border-bottom: 6px solid #b71234; 
-}
+#ffcf01}
 #header p {
   float: right;
 }
@@ -75,7 +72,10 @@ a.no_hover_background {
   font-size: 16px; 
 }
 #user_bar {
+  margin-top: 159px;
+  margin-right: 20px;
   float: right; 
+  font-family: Helvetica, Arial, sans-serif;
 }
 #user_bar ul {
   list-style-type: none; 
@@ -91,7 +91,6 @@ a.no_hover_background {
 }
 .greenLine {
   clear: both;
-  border-top: 5px solid #556b2f;
   padding: 5px; 
 }
 .itemlist {
@@ -103,7 +102,6 @@ a.no_hover_background {
   font-size: 11px; 
 }
 #footer {
-  border-top: 5px solid #C1C1C1;
   margin-top: 10px;
   clear: both;
   padding: 10px 0;
@@ -417,21 +415,37 @@ p#coming_notice {
   font-family: "Myriad Web Pro",Helvetica,Arial,sans-serif;
 }
 div#wrap {
+/*  background: url('/images/beerlist-bg.jpg') repeat-y; */
+  background: #FFD500;
+  width: 960px;
   height: 100%;
+  padding-top: 10px;
+  -moz-border-radius:0px 0px 25px 25px;
+  -webkit-border-radius:0px 0px 25px 25px;
+  border-radius:0px 0px 25px 25px;
+  /*IE 7 AND 8 DO NOT SUPPORT BORDER RADIUS*/
+  
 }
-body {
-  margin: 0;
-  padding 0;
+div#main {
+  padding: 10px;
+  background: white;
+  border-right: 2px solid #a68a00;
+  border-left: 2px solid #a68a00;
+  border-bottom: 2px solid #a68a00;
+  -webkit-border-radius: 25px; /* Saf3-4, iOS 1-3.2, Android <1.6 */
+     -moz-border-radius: 25px; /* FF1-3.6 */
+          border-radius: 25px; /* Opera 10.5, IE9, Saf5, Chrome, FF4, iOS 4, Android 2.1+ */
+          
+  /* useful if you don't want a bg color from leaking outside the border: */        
+  -moz-background-clip: padding; -webkit-background-clip: padding-box; background-clip: padding-box;
+  font-family: 'Droid Sans', sans-serif;
+}
+html {
   height: 100%;
-  background-image: -moz-linear-gradient(top, #088eff, #3652ff);
-  background-image: -webkit-gradient(linear, center top, center bottom, from(#088eff), to(#3652ff));
-  background-image: -o-linear-gradient(top, #088eff, #3652ff);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#088eff', endColorstr='#3652ff');
-  /*INNER ELEMENTS MUST NOT BREAK THIS ELEMENTS BOUNDARIES*/
-  /*Element must have a height (not auto)*/
-  /*All filters must be placed together*/
-  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#088eff', endColorstr='#3652ff')";
-  /*Element must have a height (not auto)*/
-  /*All filters must be placed together*/
-  background-image: linear-gradient(top, #088eff, #3652ff);
+  background: #333;
+}
+div#title {
+  background: url('/images/titleimg.png') no-repeat;
+  height: 200px;
+  width: 960px;
 }
