griggey would like a home link

--- a/app/views/layouts/_userbar.html.erb
+++ b/app/views/layouts/_userbar.html.erb
@@ -1,5 +1,7 @@
 <div id="user_bar">
  <ul>
+<li><%= link_to "Home", root_url %></li>
+<li>-</li>
 <li><%= link_to "Beers", beers_path %></li>
 <li>-</li>
 <li><%= link_to "Bars", bars_path %></li>
