--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -93,9 +93,11 @@ a.no_hover_background {
   padding: 5px; 
 }
 .itemlist {
-  /* border-top: 5px solid #556B2F; */
+	background: white;
+	position: relative;
+  border: 1px solid #556B2F;
+	border-radius: 8px;
   clear: both;
-  /* margin-top: 10px; */
   padding: 5px 10px;
   text-align: left;
   font-size: 11px; 
