--- a/public/stylesheets/gmaps4rails.css
+++ b/public/stylesheets/gmaps4rails.css
@@ -1,17 +1,52 @@
 .map_container {
-  padding: 6px;
-  border-width: 1px;
-  border-style: solid;
+	background: white;
+  padding: 0px;
+  /*border-width: 1px;
+    border-style: solid;
+    border-color: #ccc #ccc #999 #ccc;
+    -webkit-box-shadow: rgba(64, 64, 64, 0.5) 0 2px 5px;
+    -moz-box-shadow: rgba(64, 64, 64, 0.5) 0 2px 5px;
+    box-shadow: rgba(64, 64, 64, 0.1) 0 2px 5px;*/
+  width: 500px;
+	border-radius: 15px;
+}
+
+#gmap_popup_panel {
+	padding: 18px;
+	position: fixed;
+	height: 400px;
+	width: 500px;
+	top: 50%;
+	left: 50%;
+	margin-top: -200px;
+	margin-left: -250px;
+	background: white;
+	
+	z-index: -1;
+	border-width: 1px;
+	border-style: solid;
   border-color: #ccc #ccc #999 #ccc;
   -webkit-box-shadow: rgba(64, 64, 64, 0.5) 0 2px 5px;
   -moz-box-shadow: rgba(64, 64, 64, 0.5) 0 2px 5px;
   box-shadow: rgba(64, 64, 64, 0.1) 0 2px 5px;
-  width: 800px;
+	border-radius: 15px;
+}
+
+#gmap_popup_panel_close {  
+	font-size:14px;  
+	line-height:14px;  
+	right:6px;  
+	top:4px;  
+	position:absolute;  
+	color:#6fa5fd;  
+	font-weight:700;  
+	display:block;  
+	cursor: pointer;  
 }
 
 .gmaps4rails_map {
-  width: 800px;
-  height: 600px;
+  width: 500px;
+  height: 400px;
 }
 
 .bing_map {
