--- a/app/views/layouts/application.iphone.erb
+++ b/app/views/layouts/application.iphone.erb
@@ -1,29 +1,31 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
+	<title><%= yield(:title) || "Untitled" %></title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta id="viewport" name="viewport" content="width=320; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"/>
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <title>Beer List</title>
-	<script type="text/javascript" src="javascripts/jquery-1.4.2.min.js"></script>
-	<script type="text/javascript" src="javascripts/jqtouch.js"</script>
-	<link rel="stylesheet" type="text/css" media="screen" href="stylesheets/jqtouch/jqtouch.css"></style>
-	<link rel="stylesheet" type="text/css" media="screen" href="stylesheets/jqtouch/theme.css"></style>
-	<script type="text/javascript">
-		$.jQTouch({
-    			/* icon: 'jqtouch.png', */
-   			 	statusBar: 'black-translucent'
-   			 	/* formSelector: false */
-			});
- 	</script>
-
+		<%= stylesheet_link_tag "jqtouch/jqtouch.css", "jqtouch/theme.css" %>
+		<%= javascript_include_tag "jquery-1.4.2.min.js", "jqtouch.js", "iphone.js" %>
 </head>
 <body>
-	<%= content_tag(:p, notice, :class => 'notice') if notice.present? %>
-    <%= content_tag(:p, alert, :class => 'alert') if alert.present? %>
-
-	<div id="jqt">
-    	<%= yield %>
+	<div class="current">
+    <div class="toolbar">
+      <%= link_to "Back", root_path, :class => "back" unless current_page? root_path %>
+      <h1><%= yield(:title) %></h1>
+      <%= yield(:toolbar) %>
     </div>
+    
+    <% unless flash.empty? %>
+      <div class="info">
+      <% flash.each do |name, msg| %>
+        <%= content_tag :div, msg, :id => "flash_#{name}" %>
+      <% end %>
+      </div>
+    <% end %>
+  
+    <%= yield %>
+  </div>
 </body>
 </html>
