--- a/app/views/beers/show.iphone.erb
+++ b/app/views/beers/show.iphone.erb
@@ -2,7 +2,7 @@
 
 <h2>Brewed by:</h2>
 	<ul class="rounded">
-		<li><%= link_to @beer.brewery.name, @beer.brewery %></li>
+		<li class="arrow"><%= link_to @beer.brewery.name, @beer.brewery %></li>
 	</ul>
 
 <h2>Served At:</h2>
@@ -10,6 +10,7 @@
 	  <% for beer_item in @beer_items %>
 	    <li class="arrow">
 	      <%= link_to beer_item.bar.name, bar_path(beer_item.bar.id) %>
+				<small class="counter"><%= number_to_currency(beer_item.price) %></small>
 	    </li>
 	  <% end %>
 	</ul>
