--- a/app/views/layouts/application.iphone.erb
+++ b/app/views/layouts/application.iphone.erb
@@ -7,12 +7,18 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <title>Beer List</title>
 		<%= stylesheet_link_tag "jqtouch/jqtouch.css", "jqtouch/theme.css" %>
+		<%= javascript_include_tag :defaults %>
 		<%= javascript_include_tag "jquery-1.4.2.min.js", "jqtouch.js", "iphone.js" %>
 </head>
 <body>
 	<div class="current">
     <div class="toolbar">
-      <%= link_to "Back", root_path, :class => "back" unless current_page? root_path %>
+      <%= link_to "Home", root_path, :class => "back" unless current_page? root_path %>
+			<% if user_signed_in? %>
+				<%= link_to "Logout", destroy_user_session_path, :class => "button", :method => :delete %>
+			<% else %>
+				<%= link_to "Login", new_user_session_path, :class => "button" %>
+			<% end %>
       <h1><%= yield(:title) %></h1>
       <%= yield(:toolbar) %>
     </div>
@@ -24,7 +30,7 @@
       <% end %>
       </div>
     <% end %>
-  
+  	<h2><%= current_user.email if user_signed_in? %></h2>
     <%= yield %>
   </div>
 </body>
