--- a/app/views/beers/show.iphone.erb
+++ b/app/views/beers/show.iphone.erb
@@ -1,15 +1,13 @@
-<% content_for :title, @beer.name %>
-
 <h2>Brewed by:</h2>
 	<ul class="rounded">
-		<li class="arrow"><%= link_to @beer.brewery.name, @beer.brewery %></li>
+		<li class="arrow"><a class="button_breweries_show" brewery-id="<%= @beer.brewery.id %>" href="#breweries_show" brewery-name="<%= @beer.brewery.name %>"><%= @beer.brewery.name %></a></li>
 	</ul>
 
 <h2>Served At:</h2>
 	<ul class="rounded">
 	  <% for beer_item in @beer_items %>
 	    <li class="arrow">
-	      <%= link_to beer_item.bar.name, bar_path(beer_item.bar.id) %>
+	      <a class="button_bars_show" bar-id="<%= beer_item.bar.id %>" href="#bars_show" bar-name="<%= beer_item.bar.name %>"><%= beer_item.bar.name %></a>
 				<small class="counter"><%= number_to_currency(beer_item.price) %></small>
 	    </li>
 	  <% end %>
