--- a/app/views/bars/index.iphone.erb
+++ b/app/views/bars/index.iphone.erb
@@ -1,9 +1,5 @@
-<% content_for :title, "Bars" %>
-
-<!-- <ul class="rounded"><li class="arrow"><%= link_to "New Bar", new_bar_path %></li></ul> -->
-
 <ul class="rounded">
 	<% for bar in @bars %>
-		<li class="arrow"><%= link_to bar.name, bar %></li>
+		<li class="arrow"><a class="button_bars_show" bar-id="<%= bar.id %>" href="#bars_show" bar-name="<%= bar.name %>"><%= bar.name %></a></li>
 	<% end %>
 </ul>
