--- a/app/views/beer_items/show.iphone.erb
+++ b/app/views/beer_items/show.iphone.erb
@@ -1,12 +1,7 @@
-<div id="home">
-	<div class="toolbar">
-		<h1>Show</h1>
-		<a href="#login" class="button flip">Logout</a>
-	</div>
-	<br /><br /> <br />
-		<ul class="rounded">
-			<li class="arrow"><a href="#bars">Bars</a></li>
-			<li class="arrow"><a href="#beers">Beers</a></li>
-			<!--- <li class="arrow"><a href="#breweries">Breweries</a></li> --->
-		</ul>
-</div>
+
+	<ul class="rounded">
+		<li class="arrow"><a class="button_bars_show" bar-id="<%= @beer_item.bar.id %>" href="#bars_show" bar-name="<%= @beer_item.bar.name %>"><%= @beer_item.bar.name %></a></li>
+		<li class="arrow"><a class="button_beers_show" beer-id="<%= @beer_item.beer.id %>" href="#beers_show" beer-name="<%= @beer_item.beer.name %>"><%= @beer_item.beer.name %></a></li>
+		<li><%= number_to_currency(@beer_item.price) %></li>
+		<li><%= sprintf("%.3f",@beer_item.abd) %></li>
+	</ul>
