--- a/app/views/beers/index.iphone.erb
+++ b/app/views/beers/index.iphone.erb
@@ -1,12 +1,10 @@
-<% content_for :title, "Beers" %>
-
 <% if user_signed_in? %>
 	<ul class="rounded"><li class="arrow"><%= link_to "New Beer", new_beer_path %></li></ul>
 <% end %>
 
 <ul class="rounded">
 	<% for beer in @beers %>
-		<li class="arrow"><%= link_to beer.name, beer %></li>
+		<li class="arrow"><a class="button_beers_show" beer-id="<%= beer.id %>" href="#beers_show" beer-name="<%= beer.name %>"><%= beer.name %></a></li>
 	<% end %>
 </ul>
 		
