--- a/app/views/breweries/show.iphone.erb
+++ b/app/views/breweries/show.iphone.erb
@@ -1,8 +1,9 @@
-<% content_for :title, @brewery.name %>
-
-<h2>Beers</h2>
+<h2>Brews</h2>
 	<ul class="rounded">
 		<% for beer in @beers %>
-			<li class="arrow"><%= link_to beer.name, beer %></li>
+			<li class="arrow">
+				<a class="button_beers_show" beer-id="<%= beer.id %>" href="#beers_show" beer-name="<%= beer.name %>"><%= beer.name %></a>
+				<small class="counter"><%= beer.beer_items.count %></small>
+			</li>
 		<% end %>
 	</ul>
