--- a/app/views/layouts/application.iphone.erb
+++ b/app/views/layouts/application.iphone.erb
@@ -1,37 +1,16 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
-	<title><%= yield(:title) || "Untitled" %></title>
+	<title>ATL Beer List</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta id="viewport" name="viewport" content="width=320; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"/>
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <title>Beer List</title>
-		<%= stylesheet_link_tag "jqtouch/jqtouch.css", "jqtouch/theme.css" %>
+		<%= stylesheet_link_tag "jqtouch/jqtouch.css", "jqtouch/theme.css", "iphone.css" %>
 		<%= javascript_include_tag :defaults %>
 		<%= javascript_include_tag "jquery-1.4.2.min.js", "jqtouch.js", "iphone.js" %>
 </head>
 <body>
-	<div class="current">
-    <div class="toolbar">
-      <%= link_to "Home", root_path, :class => "back" unless current_page? root_path %>
-			<% if user_signed_in? %>
-				<%= link_to "Logout", destroy_user_session_path, :class => "button", :method => :delete %>
-			<% else %>
-				<%= link_to "Login", new_user_session_path, :class => "button" %>
-			<% end %>
-      <h1><%= yield(:title) %></h1>
-      <%= yield(:toolbar) %>
-    </div>
-    
-    <% unless flash.empty? %>
-      <div class="info">
-      <% flash.each do |name, msg| %>
-        <%= content_tag :div, msg, :id => "flash_#{name}" %>
-      <% end %>
-      </div>
-    <% end %>
-  	<h2><%= current_user.email if user_signed_in? %></h2>
-    <%= yield %>
-  </div>
+	<%= yield %>
 </body>
 </html>
