Removed new listing button

--- a/app/views/beer_items/index.iphone.erb
+++ b/app/views/beer_items/index.iphone.erb
@@ -31,7 +31,7 @@
 		  <% end %>
 		</ul>
 
-	<ul><li class="arrow"><%= link_to "New Item", new_beer_item_path %></li></ul>
+	<!-- <ul><li class="arrow"><%= link_to "New Item", new_beer_item_path %></li></ul> -->
 </div>
 
 <div id="bars_index">
