--- a/app/views/beer_items/index.iphone.erb
+++ b/app/views/beer_items/index.iphone.erb
@@ -1,6 +1,5 @@
 <div id="beer_items_index">
   <div class="toolbar">
-    <%= link_to "Home", root_path, :class => "back" unless current_page? root_path %>
 		<%= render "login_or_logout" %>
     <h1>Home</h1>
   </div>
@@ -36,7 +35,7 @@
 
 <div id="bars_index">
   <div class="toolbar">
-    <%= link_to "Home", "#beer_items_index", :class => "back" %>
+    <%= link_to "back", "#beer_items_index", :class => "back" %>
 		<%= render "login_or_logout" %>
     <h1>Bars</h1>
   </div>
@@ -57,7 +56,7 @@
 
 <div id="beers_index">
   <div class="toolbar">
-    <%= link_to "Home", "#beer_items_index", :class => "back" %>
+    <%= link_to "back", "#beer_items_index", :class => "back" %>
 		<%= render "login_or_logout" %>
     <h1>Beers</h1>
   </div>
@@ -78,7 +77,7 @@
 
 <div id="beer_items_show">
   <div class="toolbar">
-    <%= link_to "Home", "#beer_items_index", :class => "back" %>
+    <%= link_to "back", "#beer_items_index", :class => "back" %>
 		<%= render "login_or_logout" %>
     <h1>Listing</h1>
   </div>
@@ -99,7 +98,7 @@
 
 <div id="beers_show">
   <div class="toolbar">
-    <%= link_to "Home", "#beer_items_index", :class => "back" %>
+    <%= link_to "back", "#beer_items_index", :class => "back" %>
 		<%= render "login_or_logout" %>
     <h1>Beers</h1>
   </div>
@@ -120,7 +119,7 @@
 
 <div id="bars_show">
   <div class="toolbar">
-    <%= link_to "Home", "#beer_items_index", :class => "back" %>
+    <%= link_to "back", "#beer_items_index", :class => "back" %>
 		<%= render "login_or_logout" %>
     <h1>View a bar</h1>
   </div>
@@ -141,7 +140,7 @@
 
 <div id="breweries_show">
   <div class="toolbar">
-    <%= link_to "Home", "#beer_items_index", :class => "back" %>
+    <%= link_to "back", "#beer_items_index", :class => "back" %>
 		<%= render "login_or_logout" %>
     <h1>View a brewery</h1>
   </div>
