--- a/app/views/beer_items/index.iphone.erb
+++ b/app/views/beer_items/index.iphone.erb
@@ -14,8 +14,8 @@
 	<h2><%= current_user.email if user_signed_in? %></h2>
 	
 	<ul class="rounded">
-		<li class="arrow"><a class="button_bars_index" href="#bars_index">Bars</a></li>
-		<li class="arrow"><a class="button_beers_index" href="#beers_index">Beers</a></li>
+		<li class="arrow"><a class="button_bars_index">Bars</a></li>
+		<li class="arrow"><a class="button_beers_index">Beers</a></li>
 	</ul>
 
 
