--- a/app/views/beer_items/index.iphone.erb
+++ b/app/views/beer_items/index.iphone.erb
@@ -24,7 +24,7 @@
 		  <% for beer_item in @best_deals %>
 		    <li class="arrow">
 		      <!-- <%= link_to beer_item.beer.name, beer_path(beer_item.beer.id) %> -->
-					<a class="button_beer_items_show" href="#beer_items_show" bi-id="<%= beer_item.id %>"><%= beer_item.beer.name %></a>
+					<a class="button_beer_items_show" bi-id="<%= beer_item.id %>"><%= beer_item.beer.name %></a>
 					<small class="counter"><%= sprintf("%.3f",beer_item.abd) %></small>
 		    </li>
 		  <% end %>
@@ -35,7 +35,8 @@
 
 <div id="bars_index">
   <div class="toolbar">
-    <%= link_to "back", "#beer_items_index", :class => "back" %>
+		<a class="back">Back</a>
+		<a class="button home">Home</a>
 		<%= render "login_or_logout" %>
     <h1>Bars</h1>
   </div>
@@ -56,7 +57,8 @@
 
 <div id="beers_index">
   <div class="toolbar">
-    <%= link_to "back", "#beer_items_index", :class => "back" %>
+    <a class="back">Back</a>
+		<a class="button home">Home</a>
 		<%= render "login_or_logout" %>
     <h1>Beers</h1>
   </div>
@@ -77,7 +79,8 @@
 
 <div id="beer_items_show">
   <div class="toolbar">
-    <%= link_to "back", "#beer_items_index", :class => "back" %>
+    <a class="back">Back</a>
+		<a class="button home">Home</a>
 		<%= render "login_or_logout" %>
     <h1>Listing</h1>
   </div>
@@ -98,7 +101,8 @@
 
 <div id="beers_show">
   <div class="toolbar">
-    <%= link_to "back", "#beer_items_index", :class => "back" %>
+    <a class="back">Back</a>
+		<a class="button home">Home</a>
 		<%= render "login_or_logout" %>
     <h1>Beers</h1>
   </div>
@@ -119,7 +123,8 @@
 
 <div id="bars_show">
   <div class="toolbar">
-    <%= link_to "back", "#beer_items_index", :class => "back" %>
+    <a class="back">Back</a>
+		<a class="button home">Home</a>
 		<%= render "login_or_logout" %>
     <h1>View a bar</h1>
   </div>
@@ -140,7 +145,8 @@
 
 <div id="breweries_show">
   <div class="toolbar">
-    <%= link_to "back", "#beer_items_index", :class => "back" %>
+    <a class="back">Back</a>
+		<a class="button home">Home</a>
 		<%= render "login_or_logout" %>
     <h1>View a brewery</h1>
   </div>
