--- a/app/views/breweries/show.iphone.erb
+++ b/app/views/breweries/show.iphone.erb
@@ -2,7 +2,7 @@
 	<ul class="rounded">
 		<% for beer in @beers %>
 			<li class="arrow">
-				<a class="button_beers_show" beer-id="<%= beer.id %>" href="#beers_show" beer-name="<%= beer.name %>"><%= beer.name %></a>
+				<a class="button_beers_show" beer-id="<%= beer.id %>" beer-name="<%= beer.name %>"><%= beer.name %></a>
 				<small class="counter"><%= beer.beer_items.count %></small>
 			</li>
 		<% end %>
