--- a/app/views/bars/show.iphone.erb
+++ b/app/views/bars/show.iphone.erb
@@ -8,7 +8,7 @@
 	<ul class="rounded">
 		<% for beer_item in @beer_items %>
 		<li class="arrow">
-			<a class="button_beers_show" beer-id="<%= beer_item.beer.id %>" beer-name="<%= beer_item.beer.name %>"><%= truncate(beer_item.beer.name, :length => 20) %> (<%= number_to_human(beer_item.volume, :units => {:unit => beer_item.volunit}) %> <%= beer_item.pouring %>)</a>
+			<a class="button_beers_show" beer-id="<%= beer_item.beer.id %>" beer-name="<%= beer_item.beer.name %>"><%= truncate(beer_item.beer.name, :length => 16) %> (<%= number_to_human(beer_item.volume, :units => {:unit => beer_item.volunit}) %>)</a>
 			<small class="counter"><%= number_to_currency(beer_item.price) %></small>
 		</li>
 		<% end %>
