--- a/app/views/bars/index.html.erb
+++ b/app/views/bars/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Bars</h1>
 
-<%= form_tag bars_path, :method => :get do %>
+<%= form_tag bars_path, :method => :get, :remote => true do %>
   <p>
     <%= text_field_tag :search, params[:search], :size => 20 %>
     <%= submit_tag "Search", :name => nil, :class => "submit-search-button" %>
