--- a/app/views/bars/index.iphone.erb
+++ b/app/views/bars/index.iphone.erb
@@ -1,7 +1,7 @@
 <ul class="rounded">
 	<% for bar in @bars %>
 		<li class="arrow">
-			<a class="button_bars_show" bar-id="<%= bar.id %>" bar-name="<%= bar.name %>"><%= bar.name %></a>
+			<a class="button_bars_show" data-bar-id="<%= bar.id %>" data-barname="<%= bar.name %>"><%= bar.name %></a>
 			<small class="counter"><%= bar.beers.count %></small>
 		</li>
 	<% end %>
