--- a/app/views/beer_items/show.iphone.erb
+++ b/app/views/beer_items/show.iphone.erb
@@ -1,7 +1,7 @@
 
 	<ul class="rounded">
-		<li class="arrow"><a class="button_bars_show" bar-id="<%= @beer_item.bar.id %>" bar-name="<%= @beer_item.bar.name %>"><%= @beer_item.bar.name %></a></li>
-		<li class="arrow"><a class="button_beers_show" beer-id="<%= @beer_item.beer.id %>" beer-name="<%= @beer_item.beer.name %>"><%= @beer_item.beer.name %></a></li>
+		<li class="arrow"><a class="button_bars_show" data-bar-id="<%= @beer_item.bar.id %>" data-barname="<%= @beer_item.bar.name %>"><%= @beer_item.bar.name %></a></li>
+		<li class="arrow"><a class="button_beers_show" data-beer-id="<%= @beer_item.beer.id %>" data-beername="<%= @beer_item.beer.name %>"><%= @beer_item.beer.name %></a></li>
 		<li><%= number_to_currency(@beer_item.price) %></li>
-		<li><%= sprintf("%.3f",@beer_item.abd) %></li>
+		<li>ABD: <%= sprintf("%.3f",@beer_item.abd) %></li>
 	</ul>
