--- a/app/views/beers/index.iphone.erb
+++ b/app/views/beers/index.iphone.erb
@@ -1,6 +1,6 @@
 <ul class="rounded">
 	<% for beer in @beers %>
-		<li class="arrow"><a class="button_beers_show" beer-id="<%= beer.id %>" beer-name="<%= beer.name %>"><%= beer.name %></a></li>
+		<li class="arrow"><a class="button_beers_show" data-beer-id="<%= beer.id %>" data-beername="<%= beer.name %>"><%= beer.name %></a></li>
 	<% end %>
 </ul>
 		
