--- a/app/views/bars/show.html.erb
+++ b/app/views/bars/show.html.erb
@@ -20,7 +20,19 @@
 
 <h3> Pouring <%= pluralize(@bar.beers.count, "beer") %> </h3> <br />
 
-<%= render "bars_beer_items" %>
+<div>
+	<%= form_tag bar_path(@bar), :method => :get, :remote => true do %>
+	  <p>
+			View:
+			<%= select_tag "sort_by_pouring", options_for_select([["All","all"],["draught","draught"],["bottle","bottle"],["can","can"],["pitcher", "pitcher"],["cask pour","cask pour"]],params[:sort_by_pouring]), :class => "searchable_option", :id => "pouring-select", :onchange => "this.form.submit();" %>   
+	  </p>
+	<% end %>
+</div>
+
+<div id="beer_item_list">
+	<%= render "bar_beer_items" %>
+</div>
+
 <div class="greenLine"></div>
 
 
