--- a/app/views/breweries/index.html.erb
+++ b/app/views/breweries/index.html.erb
@@ -5,18 +5,15 @@
     <%= text_field_tag :search, params[:search], :size => 20 %>
     <%= submit_tag "Search", :name => nil, :class => "submit-search-button" %>
 		<div>
-			<% if params[:search].present? || params[:zip].present? %>
-				<%= link_to('Clear Search', beers_path) %>
-			<% end %>
+			<%= link_to('Clear Search', beers_path, :class => "search_results_found", :style => "display:none;") %>
 		</div>
 	</p>
 <% end %>
 
-<% if params[:search].present? %>
-	<p>
-		Found <%= pluralize(@breweries.count, 'brewery') %>
-	</p>
-<% end %>
+<p id="found_count" class="search_results_found" style="display:none;">
+	Found <%= pluralize(@breweries.count, 'brewery') %>
+</p>
+
 <br>
 <p>Hint:  Click on a row to view the beer list for a bar!</p>
 
