--- a/app/views/breweries/index.js.erb
+++ b/app/views/breweries/index.js.erb
@@ -1,1 +1,3 @@
 $("#brewery_list_index").html("<%= escape_javascript(render('brewery_list')) %>");
+$("#found_count").html("Found <%= escape_javascript(pluralize(@breweries.count, 'brewery')) %>");
+$(".search_results_found").show();
