--- a/app/views/beers/show.iphone.erb
+++ b/app/views/beers/show.iphone.erb
@@ -1,14 +1,29 @@
-<h2>Brewed by:</h2>
-	<ul class="rounded">
-		<li class="arrow"><a class="button_breweries_show" data-brewery-id="<%= @beer.brewery.id %>" data-breweryname="<%= @beer.brewery.name %>"><%= @beer.brewery.name %></a></li>
-	</ul>
+<div data-role="header">
+	<a data-rel="back" data-icon="arrow-l">Back</a>
+  <h1><%= @beer.name %></h1>
+	<% if user_signed_in? %>
+		<a data-icon="plus">Login</a>
+	<% else %>
+		<a data-icon="delete">Logout</a>
+	<% end %>
+</div>
 
-<h2>Served At:</h2>
-	<ul class="rounded">
-	  <% for beer_item in @beer_items %>
-	    <li class="arrow">
-	      <a class="button_bars_show" data-bar-id="<%= beer_item.bar.id %>" data-barname="<%= beer_item.bar.name %>"><%= truncate(beer_item.bar.name, :length => 16) %> (<%= number_to_human(beer_item.volume, :units => {:unit => beer_item.volunit}) %>)</a>
-				<small class="counter"><%= number_to_currency(beer_item.price) %></small>
-	    </li>
-	  <% end %>
+<div data-role="content">
+	<div data-role="collapsible">
+		<h3>Information</h3>
+			Brewery
+						<%= link_to @beer.brewery.name, brewery_path(@beer.brewery.id), :"data-role" => "button", :"data-icon" => "arrow-r", :"data-iconpos" => "right" %>
+	</div>
+
+	<h3>Served at:</h3>
+	<ul data-role="listview" data-inset="true" data-theme="d" data-filter="true">
+		<% for beer_item in @beer_items %>
+		<li>
+			<%= link_to truncate(beer_item.bar.name, :length => 16), beer_item %>
+			<div class="ui-li-count">
+				<%= "#{number_to_human(beer_item.volume, :units => {:unit => beer_item.volunit})},  #{number_to_currency(beer_item.price)}" %>
+			</div>
+		</li>
+		<% end %>
 	</ul>
+</div>
