--- a/app/views/bars/index.iphone.erb
+++ b/app/views/bars/index.iphone.erb
@@ -1,8 +1,20 @@
-<ul class="rounded">
-	<% for bar in @bars %>
-		<li class="arrow">
-			<a class="button_bars_show" data-bar-id="<%= bar.id %>" data-barname="<%= bar.name %>"><%= bar.name %></a>
-			<small class="counter"><%= bar.beers.count %></small>
-		</li>
+<div data-role="header">
+	<a data-rel="back" data-icon="arrow-l">Back</a>
+  <h1>Bars</h1>
+	<% if user_signed_in? %>
+		<a data-icon="plus">Login</a>
+	<% else %>
+		<a data-icon="delete">Logout</a>
 	<% end %>
-</ul>
+</div>
+
+<div data-role="content">
+	<ul data-role="listview" data-theme="d" data-filter="true">
+		<% for bar in @bars %>
+			<li>
+				<%= link_to bar.name, bar %>
+				<div class="ui-li-count"><%= bar.beers.count %></div>
+			</li>
+		<% end %>
+	</ul>
+</div>
