--- a/app/views/beer_items/index.iphone.erb
+++ b/app/views/beer_items/index.iphone.erb
@@ -1,166 +1,27 @@
-<div id="beer_items_index">
-  <div class="toolbar">
-		<%= render "login_or_logout" %>
-    <h1>Home</h1>
-  </div>
-	
-	<% unless flash.empty? %>
-    <div class="info">
-    <% flash.each do |name, msg| %>
-      <%= content_tag :div, msg, :id => "flash_#{name}" %>
-    <% end %>
-    </div>
-  <% end %>
-	<h2><%= current_user.email if user_signed_in? %></h2>
-	
-	<ul class="rounded">
-		<li class="arrow"><a class="button_bars_index">Bars</a></li>
-		<li class="arrow"><a class="button_beers_index">Beers</a></li>
+<div data-role="header">
+	<h1>Home</h1>
+	<% if user_signed_in? %>
+		<a data-icon="delete" class="ui-btn-right">Logout</a>
+		<a data-icon="plus" class="ui-btn-left">Listing</a>
+	<% else %>
+		<a data-icon="plus" class="ui-btn-right">Login</a>
+	<% end %>
+</div>
+
+<div data-role="content">
+	<ul data-role="listview" data-inset="true" data-theme="d">
+		<li><%= link_to "Bars", bars_path %></li>
+		<li><%= link_to "Beers", beers_path %></li>
+		<li><%= link_to "Breweries", breweries_path %></li>
 	</ul>
-
-
-	<h2>Best Deals</h2>
-		<ul class="rounded">
+	<h1>Best Deals</h1>
+		<ul data-role="listview" data-inset="true" data-theme="d">
 		  <% for beer_item in @best_deals %>
-		    <li class="arrow">
+		    <li>
 		      <!-- <%= link_to beer_item.beer.name, beer_path(beer_item.beer.id) %> -->
 					<a class="button_beer_items_show" data-bi-id="<%= beer_item.id %>"><%= beer_item.beer.name %></a>
-					<small class="counter"><%= sprintf("%.3f",beer_item.abd) %></small>
+					<div class="ui-li-count"><%= sprintf("%.3f",beer_item.abd) %></div>
 		    </li>
 		  <% end %>
 		</ul>
-
-	<!-- <ul><li class="arrow"><%= link_to "New Item", new_beer_item_path %></li></ul> -->
-</div>
-
-<div id="bars_index">
-  <div class="toolbar">
-		<a class="back">Back</a>
-		<a class="button home">Home</a>
-		<%= render "login_or_logout" %>
-    <h1>Bars</h1>
-  </div>
-	
-	<% unless flash.empty? %>
-    <div class="info">
-    <% flash.each do |name, msg| %>
-      <%= content_tag :div, msg, :id => "flash_#{name}" %>
-    <% end %>
-    </div>
-  <% end %>
-	<h2><%= current_user.email if user_signed_in? %></h2>
-	
-	<div id="bars_index_container">
-		Loading!
-	</div>
-</div>
-
-<div id="beers_index">
-  <div class="toolbar">
-    <a class="back">Back</a>
-		<a class="button home">Home</a>
-		<%= render "login_or_logout" %>
-    <h1>Beers</h1>
-  </div>
-	
-	<% unless flash.empty? %>
-    <div class="info">
-    <% flash.each do |name, msg| %>
-      <%= content_tag :div, msg, :id => "flash_#{name}" %>
-    <% end %>
-    </div>
-  <% end %>
-	<h2><%= current_user.email if user_signed_in? %></h2>
-	
-	<div id="beers_index_container">
-		Loading!
-	</div>
-</div>
-
-<div id="beer_items_show">
-  <div class="toolbar">
-    <a class="back">Back</a>
-		<a class="button home">Home</a>
-		<%= render "login_or_logout" %>
-    <h1>Listing</h1>
-  </div>
-	
-	<% unless flash.empty? %>
-    <div class="info">
-    <% flash.each do |name, msg| %>
-      <%= content_tag :div, msg, :id => "flash_#{name}" %>
-    <% end %>
-    </div>
-  <% end %>
-	<h2><%= current_user.email if user_signed_in? %></h2>
-	
-	<div id="beer_items_show_container">
-		Loading!
-	</div>
-</div>
-
-<div id="beers_show">
-  <div class="toolbar">
-    <a class="back">Back</a>
-		<a class="button home">Home</a>
-		<%= render "login_or_logout" %>
-    <h1>Beers</h1>
-  </div>
-	
-	<% unless flash.empty? %>
-    <div class="info">
-    <% flash.each do |name, msg| %>
-      <%= content_tag :div, msg, :id => "flash_#{name}" %>
-    <% end %>
-    </div>
-  <% end %>
-	<h2><%= current_user.email if user_signed_in? %></h2>
-	
-	<div id="beers_show_container">
-		Loading!
-	</div>
-</div>
-
-<div id="bars_show">
-  <div class="toolbar">
-    <a class="back">Back</a>
-		<a class="button home">Home</a>
-		<%= render "login_or_logout" %>
-    <h1>View a bar</h1>
-  </div>
-	
-	<% unless flash.empty? %>
-    <div class="info">
-    <% flash.each do |name, msg| %>
-      <%= content_tag :div, msg, :id => "flash_#{name}" %>
-    <% end %>
-    </div>
-  <% end %>
-	<h2><%= current_user.email if user_signed_in? %></h2>
-	
-	<div id="bars_show_container">
-		Loading!
-	</div>
-</div>
-
-<div id="breweries_show">
-  <div class="toolbar">
-    <a class="back">Back</a>
-		<a class="button home">Home</a>
-		<%= render "login_or_logout" %>
-    <h1>View a brewery</h1>
-  </div>
-	
-	<% unless flash.empty? %>
-    <div class="info">
-    <% flash.each do |name, msg| %>
-      <%= content_tag :div, msg, :id => "flash_#{name}" %>
-    <% end %>
-    </div>
-  <% end %>
-	<h2><%= current_user.email if user_signed_in? %></h2>
-	
-	<div id="breweries_show_container">
-		Loading!
-	</div>
 </div>
