--- a/app/views/beer_items/show.iphone.erb
+++ b/app/views/beer_items/show.iphone.erb
@@ -1,7 +1,25 @@
+<div data-role="header">
+	<a data-rel="back" data-icon="arrow-l">Back</a>
+  <h1>View Listing</h1>
+	<% if user_signed_in? %>
+		<a data-icon="plus">Login</a>
+	<% else %>
+		<a data-icon="delete">Logout</a>
+	<% end %>
+</div>
 
-	<ul class="rounded">
-		<li class="arrow"><a class="button_bars_show" data-bar-id="<%= @beer_item.bar.id %>" data-barname="<%= @beer_item.bar.name %>"><%= @beer_item.bar.name %></a></li>
-		<li class="arrow"><a class="button_beers_show" data-beer-id="<%= @beer_item.beer.id %>" data-beername="<%= @beer_item.beer.name %>"><%= @beer_item.beer.name %></a></li>
-		<li><%= number_to_currency(@beer_item.price) %></li>
-		<li>ABD: <%= sprintf("%.3f",@beer_item.abd) %></li>
+<div data-role="content">
+	<ul data-role="listview" data-inset="true" data-theme="d">
+		<li data-role="list-divider">Bar</li>
+		<li><%= link_to @beer_item.bar.name, @beer_item.bar %></li>
+		<li data-role="list-divider">Beer</li>
+		<li><%= link_to @beer_item.beer.name, @beer_item.beer %></li>
+		<li data-role="list-divider">Details</li>
+		<li><%= "#{@beer_item.volume} #{@beer_item.volunit} #{@beer_item.pouring} for #{number_to_currency(@beer_item.price)} (ABV: #{@beer_item.beer.abv}%, ABD: #{sprintf("%.3f",@beer_item.abd)})" %></li>
 	</ul>
+	
+	<fieldset class="ui-grid-a">
+		<div class="ui-block-a"><a href=<%= "/beer_items/#{@beer_item.id}/edit" %> type="button" data-theme="c">Edit</a></div>
+		<div class="ui-block-b"><a type="button" data-theme="c">Delete</a></div>	   
+	</fieldset>
+</div>
