--- a/app/views/beers/index.iphone.erb
+++ b/app/views/beers/index.iphone.erb
@@ -1,6 +1,23 @@
-<ul class="rounded">
-	<% for beer in @beers %>
-		<li class="arrow"><a class="button_beers_show" data-beer-id="<%= beer.id %>" data-beername="<%= beer.name %>"><%= beer.name %></a></li>
+<div data-role="header">
+	<a data-rel="back" data-icon="arrow-l">Back</a>
+  <h1>Beers</h1>
+	<% if user_signed_in? %>
+		<a data-icon="plus">Login</a>
+	<% else %>
+		<a data-icon="delete">Logout</a>
 	<% end %>
-</ul>
+</div>
+
+<div data-role="content">
+	<ul data-role="listview" data-theme="d" data-filter="true">
+		<% for beer in @beers %>
+			<li>
+				<%= link_to beer.name, beer %>
+			</li>
+		<% end %>
+	</ul>
+</div>
+
+
+
 		
