--- a/app/views/beer_items/index.iphone.erb
+++ b/app/views/beer_items/index.iphone.erb
@@ -2,9 +2,9 @@
 	<h1>Home</h1>
 	<% if user_signed_in? %>
 		<a data-icon="delete" class="ui-btn-right">Logout</a>
-		<a data-icon="plus" class="ui-btn-left">Listing</a>
+		<a href="users/sign_out/" data-icon="plus" class="ui-btn-left">Listing</a>
 	<% else %>
-		<a data-icon="plus" class="ui-btn-right">Login</a>
+		<a href="users/sign_in/" data-transition="flip" data-icon="plus" class="ui-btn-right">Login</a>
 	<% end %>
 </div>
 
@@ -18,8 +18,7 @@
 		<ul data-role="listview" data-inset="true" data-theme="d">
 		  <% for beer_item in @best_deals %>
 		    <li>
-		      <!-- <%= link_to beer_item.beer.name, beer_path(beer_item.beer.id) %> -->
-					<a class="button_beer_items_show" data-bi-id="<%= beer_item.id %>"><%= beer_item.beer.name %></a>
+		      <%= link_to beer_item.beer.name, beer_item %>
 					<div class="ui-li-count"><%= sprintf("%.3f",beer_item.abd) %></div>
 		    </li>
 		  <% end %>
