--- a/app/views/beers/show.iphone.erb
+++ b/app/views/beers/show.iphone.erb
@@ -1,7 +1,7 @@
 <div data-role="header">
 	<a data-rel="back" data-icon="arrow-l">Back</a>
   <h1><%= @beer.name %></h1>
-	<% if user_signed_in? %>
+	<% unless user_signed_in? %>
 		<a data-icon="plus">Login</a>
 	<% else %>
 		<a data-icon="delete">Logout</a>
